# Mygit

./: .gitignore  CMakeLists.txt  DEVLOG.md  README.md
docs/: BUILD_JOURNEY.md
include/mygit/cli/: command.h
include/mygit/core/: object.h  types.h
include/mygit/diff/: diff.h
include/mygit/index/: index.h
include/mygit/merge/: merge.h
include/mygit/objects/: blob.h  commit.h  tree.h
include/mygit/refs/: ref_manager.h
include/mygit/repository/: repository.h
include/mygit/storage/: file_utils.h  object_store.h
include/mygit/utils/: compression.h  gitignore.h  hash.h
scripts/: mygit_tests.sh
src/cli/: add_command.cpp  branch_command.cpp  checkout_command.cpp  command.cpp  commit_command.cpp  diff_command.cpp  gc_command.cpp  init_command.cpp  log_command.cpp  main.cpp  merge_command.cpp  rm_command.cpp  status_command.cpp
src/core/: object.cpp
src/diff/: diff.cpp
src/index/: index.cpp
src/merge/: merge.cpp
src/objects/: blob.cpp  commit.cpp  tree.cpp
src/refs/: ref_manager.cpp
src/repository/: repository.cpp
src/storage/: file_utils.cpp  object_store.cpp
src/utils/: compression.cpp  gitignore.cpp  hash.cpp
tests/integration/: mygit_tests2.sh  mygit_tests3.sh
